Add ability to revoke sessions
